@@ -6,11 +6,14 @@ import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParseException;
+import com.google.gson.JsonSyntaxException;
 import com.sim_backend.websockets.annotations.OCPPMessageInfo;
+import com.sim_backend.websockets.enums.ErrorCode;
 import com.sim_backend.websockets.events.OnOCPPMessage;
 import com.sim_backend.websockets.events.OnOCPPMessageListener;
 import com.sim_backend.websockets.exceptions.OCPPBadCallID;
 import com.sim_backend.websockets.exceptions.OCPPBadClass;
+import com.sim_backend.websockets.exceptions.OCPPBadMessage;
 import com.sim_backend.websockets.exceptions.OCPPCannotProcessMessage;
 import com.sim_backend.websockets.exceptions.OCPPMessageFailure;
 import com.sim_backend.websockets.exceptions.OCPPUnsupportedMessage;
@@ -89,7 +92,7 @@ public class OCPPWebSocketClient extends WebSocketClient {
     String messageWithTimestamp = message.replaceFirst("\\[", "[\"" + timestamp + "\", ");
     txMessages.add(messageWithTimestamp);
     if (txMessages.size() > 50) {
-      txMessages.remove(0);
+      txMessages.removeFirst();
     }
   }
 
@@ -104,7 +107,7 @@ public class OCPPWebSocketClient extends WebSocketClient {
         message.replaceFirst("\\[", "[\"" + messageName + "\", \"" + timestamp + "\", ");
     rxMessages.add(modifiedMessage);
     if (rxMessages.size() > 50) {
-      rxMessages.remove(0);
+      rxMessages.removeFirst();
     }
   }
 
@@ -172,70 +175,130 @@ public class OCPPWebSocketClient extends WebSocketClient {
   @VisibleForTesting
   void handleMessage(final String s) throws Exception {
     Gson gson = GsonUtilities.getGson();
-    JsonElement element = gson.fromJson(s, JsonElement.class);
+    try {
+      JsonElement element = gson.fromJson(s, JsonElement.class);
 
-    if (!element.isJsonArray()) {
-      throw new JsonParseException("Expected array got " + element);
-    }
-
-    JsonArray array = element.getAsJsonArray();
-    String msgId = array.get(MESSAGE_ID_INDEX).getAsString();
-    String messageName = "";
-    String messageType = "";
-    JsonObject data;
-
-    int callId = array.get(CALL_ID_INDEX).getAsInt();
-    switch (callId) {
-      case OCPPMessage.CALL_ID_REQUEST -> {
-        // handling a simple Call
-        messageName = array.get(NAME_INDEX).getAsString();
-        data = array.get(PAYLOAD_INDEX).getAsJsonObject();
-      }
-      case OCPPMessage.CALL_ID_RESPONSE -> {
-        // handling a CallResult
-        OCPPMessage prevMessage = this.queue.getPreviousMessage(msgId);
-        if (prevMessage == null) {
-          log.warn("Received OCPP response message with an unknown ID {}: {}", msgId, s);
-          throw new OCPPCannotProcessMessage(s, msgId);
-        }
-
-        this.queue.clearPreviousMessage(prevMessage);
-        OCPPMessageInfo info = prevMessage.getClass().getAnnotation(OCPPMessageInfo.class);
-        messageName = info.messageName() + "Response";
-        messageType = info.messageName();
-        this.recordRxMessage(s, messageType);
-        data = array.get(PAYLOAD_INDEX - 1).getAsJsonObject();
-      }
-      case OCPPMessage.CALL_ID_ERROR -> {
-        OCPPMessage prevMessage = this.queue.getPreviousMessage(msgId);
-        if (prevMessage == null) {
-          log.warn("Received OCPP error message with an unknown ID {}: {}", msgId, s);
-          throw new OCPPCannotProcessMessage(s, msgId);
-        }
-
-        this.queue.clearPreviousMessage(prevMessage);
-        OCPPMessageError error = new OCPPMessageError(array);
-        error.setErroredMessage(prevMessage);
-        this.handleReceivedMessage(OCPPMessageError.class, error);
-        log.warn("Received OCPPError {}", error.toString());
-        OCPPMessageInfo info = prevMessage.getClass().getAnnotation(OCPPMessageInfo.class);
-        messageType = info.messageName();
-        this.recordRxMessage(s, messageType);
+      if (element == null) {
+        this.pushCallError(ErrorCode.FormatViolation, "Provided empty string");
         return;
       }
-      default -> throw new OCPPBadCallID(callId, s);
-    }
 
-    // We found our class
-    Class<?> messageClass = OCPPMessage.getMessageByName(messageName);
-    if (messageClass == null) {
-      log.warn("Could not find matching class for message name {}: {}", messageName, s);
-      throw new OCPPUnsupportedMessage(s, messageName);
-    }
+      if (!element.isJsonArray()) {
+        this.pushCallError(ErrorCode.FormatViolation, "Root Element should be an array");
+        throw new JsonParseException("Expected array got " + element);
+      }
 
-    OCPPMessage message = (OCPPMessage) gson.fromJson(data, messageClass);
-    message.setMessageID(msgId);
-    this.handleReceivedMessage(messageClass, message);
+      JsonArray array = element.getAsJsonArray();
+      String msgId = array.get(MESSAGE_ID_INDEX).getAsString();
+      String messageName;
+      String messageType;
+      JsonObject data;
+
+      int callId = array.get(CALL_ID_INDEX).getAsInt();
+      switch (callId) {
+        case OCPPMessage.CALL_ID_REQUEST -> {
+          if (array.size() != 4) {
+            this.pushCallError(
+                ErrorCode.OccurenceConstraintViolation,
+                "Request provided wrong number of array elements",
+                msgId);
+            throw new OCPPBadMessage("Request had invalid array length");
+          }
+          // handling a simple Call
+          messageName = array.get(NAME_INDEX).getAsString();
+          data = array.get(PAYLOAD_INDEX).getAsJsonObject();
+        }
+        case OCPPMessage.CALL_ID_RESPONSE -> {
+          if (array.size() != 3) {
+            this.pushCallError(
+                ErrorCode.OccurenceConstraintViolation,
+                "Response provided wrong number of array elements",
+                msgId);
+            throw new OCPPBadMessage("Response had invalid array length");
+          }
+          // handling a CallResult
+          OCPPMessage prevMessage = this.queue.getPreviousMessage(msgId);
+          if (prevMessage == null) {
+            this.pushCallError(
+                ErrorCode.ProtocolError, "Received Response with an unknown ID", msgId);
+            log.warn("Received OCPP response message with an unknown ID {}: {}", msgId, s);
+            throw new OCPPCannotProcessMessage(s, msgId);
+          }
+
+          this.queue.clearPreviousMessage(prevMessage);
+          OCPPMessageInfo info = prevMessage.getClass().getAnnotation(OCPPMessageInfo.class);
+          messageName = info.messageName() + "Response";
+          messageType = info.messageName();
+          this.recordRxMessage(s, messageType);
+          data = array.get(PAYLOAD_INDEX - 1).getAsJsonObject();
+        }
+        case OCPPMessage.CALL_ID_ERROR -> {
+          if (array.size() != 5) {
+            this.pushCallError(
+                ErrorCode.OccurenceConstraintViolation,
+                "Error provided wrong number of array elements",
+                msgId);
+            throw new OCPPBadMessage("Error had invalid array length");
+          }
+
+          OCPPMessage prevMessage = this.queue.getPreviousMessage(msgId);
+          if (prevMessage == null) {
+            this.pushCallError(ErrorCode.ProtocolError, "Received Error with an unknown ID", msgId);
+            log.warn("Received OCPP error message with an unknown ID {}: {}", msgId, s);
+            throw new OCPPCannotProcessMessage(s, msgId);
+          }
+
+          this.queue.clearPreviousMessage(prevMessage);
+          try {
+            if (!array.get(OCPPMessageError.DETAIL_INDEX).isJsonObject()) {
+              this.pushCallError(
+                  ErrorCode.PropertyConstraintViolation,
+                  "Error details was not a json object",
+                  msgId);
+
+              return;
+            }
+
+            OCPPMessageError error =
+                new OCPPMessageError(
+                    ErrorCode.valueOf(array.get(OCPPMessageError.CODE_INDEX).getAsString()),
+                    array.get(OCPPMessageError.DESCRIPTION_INDEX).getAsString(),
+                    array.get(OCPPMessageError.DETAIL_INDEX).getAsJsonObject());
+            error.setMessageID(msgId);
+            error.setErroredMessage(prevMessage);
+            this.handleReceivedMessage(OCPPMessageError.class, error);
+            log.warn("Received OCPPError {}", error);
+            OCPPMessageInfo info = prevMessage.getClass().getAnnotation(OCPPMessageInfo.class);
+            messageType = info.messageName();
+            this.recordRxMessage(s, messageType);
+          } catch (IllegalArgumentException exception) {
+
+            this.pushCallError(
+                ErrorCode.PropertyConstraintViolation, "Received Unknown Error Code", msgId);
+          }
+
+          return;
+        }
+        default -> {
+          this.pushCallError(ErrorCode.PropertyConstraintViolation, "Provided bad Call ID", msgId);
+          throw new OCPPBadCallID(callId, s);
+        }
+      }
+
+      // We found our class
+      Class<?> messageClass = OCPPMessage.getMessageByName(messageName);
+      if (messageClass == null) {
+        log.warn("Could not find matching class for message name {}: {}", messageName, s);
+        this.pushCallError(ErrorCode.NotSupported, "Unsupported action", msgId);
+        throw new OCPPUnsupportedMessage(s, messageName);
+      }
+
+      OCPPMessage message = (OCPPMessage) gson.fromJson(data, messageClass);
+      message.setMessageID(msgId);
+      this.handleReceivedMessage(messageClass, message);
+    } catch (JsonSyntaxException exception) {
+      this.pushCallError(ErrorCode.FormatViolation, exception.getLocalizedMessage());
+    }
   }
 
   @Override
@@ -243,6 +306,30 @@ public class OCPPWebSocketClient extends WebSocketClient {
 
   @Override
   public void onError(Exception e) {}
+
+  /**
+   * Push an OCPPMessageError to the stack.
+   *
+   * @param code The ErrorCode.
+   * @param description The error's description.
+   */
+  public void pushCallError(ErrorCode code, String description) {
+    OCPPMessageError error = new OCPPMessageError(code, description, new JsonObject());
+    this.pushMessage(error);
+  }
+
+  /**
+   * Push an OCPPMessageError to the stack.
+   *
+   * @param code The ErrorCode.
+   * @param description The error's description.
+   * @param msgID The message ID to send the error with.
+   */
+  public void pushCallError(ErrorCode code, String description, String msgID) {
+    OCPPMessageError error = new OCPPMessageError(code, description, new JsonObject());
+    error.setMessageID(msgID);
+    this.pushMessage(error);
+  }
 
   /**
    * Helper function for when we receive an OCPP message. This is not for registering a listener.
